[package]
name = "iced_webview_v2"
version = "0.1.4"
edition = "2021"
rust-version = "1.90.0"
description = "An easily embedded webview library for iced"
authors = ["LegitCamper", "Franz Geffke <mail@gofranz.com>"]
repository = "https://github.com/franzos/iced_webview_v2/"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "iced_webview"

[package.metadata.docs.rs]
features = ["docs_only"]
all-features = false
no-default-features = true

[profile.dev]
incremental = true
opt-level = "s"
lto = "thin"

[features]
default = ["litehtml"]
blitz = [
    "dep:blitz-dom",
    "dep:blitz-html",
    "dep:blitz-paint",
    "dep:blitz-traits",
    "dep:blitz-net",
    "dep:anyrender",
    "dep:anyrender_vello_cpu",
    "dep:peniko",
    "dep:cursor-icon",
    "dep:keyboard-types",
    "dep:reqwest",
    "dep:tokio",
]
litehtml = ["dep:litehtml", "dep:reqwest"]
servo = ["dep:servo", "dep:urlencoding", "dep:rustls", "dep:euclid", "dep:keyboard-types-servo", "dep:dpi", "iced/wgpu"]
cef = ["dep:cef", "dep:urlencoding", "dep:libc", "iced/wgpu"]
docs_only = []

[dependencies]
iced = { git = "https://github.com/playtron-os/iced.git", rev = "066967fa", default-features = false, features = ["advanced", "image", "tokio", "lazy", "wayland", "x11"] }
#iced = { path = "../iced", default-features = false, features = ["advanced", "image", "tokio", "lazy", "wayland", "x11"] }
rand = "0.8.5"
litehtml = { version = "0.2.3", features = ["pixbuf", "html"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
url = "2.5.2"
log = "0.4"

# Blitz engine deps (git: stylo 0.12, matching Servo)
blitz-dom = { git = "https://github.com/DioxusLabs/blitz", rev = "eeaa9938fac918bd07e5a30472d0f4a44e8ffa31", optional = true }
blitz-html = { git = "https://github.com/DioxusLabs/blitz", rev = "eeaa9938fac918bd07e5a30472d0f4a44e8ffa31", optional = true }
blitz-paint = { git = "https://github.com/DioxusLabs/blitz", rev = "eeaa9938fac918bd07e5a30472d0f4a44e8ffa31", optional = true }
blitz-traits = { git = "https://github.com/DioxusLabs/blitz", rev = "eeaa9938fac918bd07e5a30472d0f4a44e8ffa31", optional = true }
blitz-net = { git = "https://github.com/DioxusLabs/blitz", rev = "eeaa9938fac918bd07e5a30472d0f4a44e8ffa31", optional = true }
anyrender = { version = "0.7", optional = true }
anyrender_vello_cpu = { version = "0.9", optional = true }
peniko = { version = "0.6", optional = true }
cursor-icon = { version = "1", optional = true }
keyboard-types = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

# Servo engine deps
servo = { git = "https://github.com/servo/servo", rev = "853fcf4fda0c31ab418c21eac4323d9e91d2b912", package = "libservo", optional = true }
urlencoding = { version = "2", optional = true }
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "aws_lc_rs"], optional = true }
euclid = { version = "0.22", optional = true }
keyboard-types-servo = { package = "keyboard-types", version = "0.8", optional = true }
dpi = { version = "0.1", optional = true }

# CEF engine deps
cef = { version = "145", default-features = false, optional = true }
libc = { version = "0.2", optional = true }

# When both blitz and servo features are resolved, Cargo sees two copies of
# stylo (crates.io for blitz, git for servo). Patch crates.io to use servo's
# git rev so they resolve to a single copy.
[patch.crates-io]
stylo = { git = "https://github.com/servo/stylo", rev = "9a413b4d05d899c3baedd7b648dbf2c23dc9b879" }
stylo_traits = { git = "https://github.com/servo/stylo", rev = "9a413b4d05d899c3baedd7b648dbf2c23dc9b879" }
stylo_atoms = { git = "https://github.com/servo/stylo", rev = "9a413b4d05d899c3baedd7b648dbf2c23dc9b879" }
stylo_dom = { git = "https://github.com/servo/stylo", rev = "9a413b4d05d899c3baedd7b648dbf2c23dc9b879" }
selectors = { git = "https://github.com/servo/stylo", rev = "9a413b4d05d899c3baedd7b648dbf2c23dc9b879" }

[[example]]
name = "webview"

[[example]]
name = "email"

[[example]]
name = "embedded_webview"

